--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media screen and (max-width: 1000px) {
+  html {
+    font-size: 85%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  html {
+    font-size: 65%;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  html {
+    font-size: 55%;
+  }
+}
