--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -9,6 +8,11 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+button {
+  font-family: 'Poppins', sans-serif;
+  cursor: pointer;
 }
 
 code {
@@ -27,4 +31,3 @@ code {
     font-size: 65%;
   }
 }
-
