--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+button {
+  font-family: "Poppins", sans-serif;
+  border: none;
+  background: none;
+}
+
 .App {
   text-align: center;
 }
@@ -13,15 +19,17 @@
   }
 }
 
-textarea, input {
-  font-family: 'Poppins', sans-serif;
+textarea,
+input {
+  font-family: "Poppins", sans-serif;
 }
 
 textarea {
   resize: none;
 }
 
-textarea:focus, input:focus{
+textarea:focus,
+input:focus {
   outline: none;
 }
 
